// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accountSummaryBlock renders degraded account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "❌ Account Degraded has issues.",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "elements": [
        {
          "elements": [
            {
              "style": {
                "bold": true,
              },
              "text": "Blast Radius:
",
              "type": "text",
            },
          ],
          "type": "rich_text_section",
        },
        {
          "elements": [
            {
              "elements": [
                {
                  "text": "New degrading or failing checks detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
            {
              "elements": [
                {
                  "text": "No failing checks detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
          ],
          "indent": 0,
          "style": "bullet",
          "type": "rich_text_list",
        },
      ],
      "type": "rich_text",
    },
    {
      "elements": [
        {
          "elements": [
            {
              "style": {
                "bold": true,
              },
              "text": "Top 3 Error Patterns:
",
              "type": "text",
            },
          ],
          "type": "rich_text_section",
        },
        {
          "elements": [
            {
              "elements": [
                {
                  "text": "Error Pattern #1 (100 times)",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
            {
              "elements": [
                {
                  "text": "Error Pattern #2 (100 times)",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
          ],
          "indent": 0,
          "style": "bullet",
          "type": "rich_text_list",
        },
      ],
      "type": "rich_text",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 45 :warning: *DEGRADED*: 5 :x: *FAILING*: 0",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "elements": [
        {
          "action_id": "show_failing_checks",
          "text": {
            "emoji": true,
            "text": "List Failing Checks",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123,124",
        },
      ],
      "type": "actions",
    },
  ],
}
`;

exports[`accountSummaryBlock renders failing account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "❌ Account Failing has issues.",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "elements": [
        {
          "elements": [
            {
              "style": {
                "bold": true,
              },
              "text": "Blast Radius:
",
              "type": "text",
            },
          ],
          "type": "rich_text_section",
        },
        {
          "elements": [
            {
              "elements": [
                {
                  "text": "New degrading or failing checks detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
            {
              "elements": [
                {
                  "text": "No failing checks detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
          ],
          "indent": 0,
          "style": "bullet",
          "type": "rich_text_list",
        },
      ],
      "type": "rich_text",
    },
    {
      "elements": [
        {
          "elements": [
            {
              "style": {
                "bold": true,
              },
              "text": "Top 3 Error Patterns:
",
              "type": "text",
            },
          ],
          "type": "rich_text_section",
        },
        {
          "elements": [
            {
              "elements": [
                {
                  "text": "Error Pattern #1 (10 times)",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
          ],
          "indent": 0,
          "style": "bullet",
          "type": "rich_text_list",
        },
      ],
      "type": "rich_text",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 40 :warning: *DEGRADED*: 2 :x: *FAILING*: 8",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "elements": [
        {
          "action_id": "show_failing_checks",
          "text": {
            "emoji": true,
            "text": "List Failing Checks",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123,124,125",
        },
      ],
      "type": "actions",
    },
  ],
}
`;

exports[`accountSummaryBlock renders healthy account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "✅ Account Healthy appears stable.",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "elements": [
        {
          "elements": [
            {
              "style": {
                "bold": true,
              },
              "text": "Blast Radius:
",
              "type": "text",
            },
          ],
          "type": "rich_text_section",
        },
        {
          "elements": [
            {
              "elements": [
                {
                  "text": "No issues detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
            {
              "elements": [
                {
                  "text": "No failing checks detected in the last 24h.",
                  "type": "text",
                },
              ],
              "type": "rich_text_section",
            },
          ],
          "indent": 0,
          "style": "bullet",
          "type": "rich_text_list",
        },
      ],
      "type": "rich_text",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 50 :warning: *DEGRADED*: 0 :x: *FAILING*: 0",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
}
`;
